// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TwoFactorAuthenticationSection /> render() should open the Two-Factor Authentication Modal 1`] = `
<body>
  <div>
    <div
      class="heading-subsection-semibold mb16"
    >
      Two-Factor Authentication
      <div
        class="badge ml-3 "
      >
        Disabled
      </div>
    </div>
    <div
      class="body-regular mb16"
    >
      For an added layer of security, your admin requires you to use two-factor authentication (2FA) when you sign in to Gorgias.
      <a
        href=""
      >
         Learn more
      </a>
    </div>
    <button
      class="wrapper primary medium"
      type="button"
    >
      Enable Two-Factor Authentication
    </button>
    <div
      class="Open"
    >
      TwoFactorAuthenticationModal mocked
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationSection /> render() should render the Two-Factor Authentication Section 1`] = `
<body>
  <div>
    <div
      class="heading-subsection-semibold mb16"
    >
      Two-Factor Authentication
      <div
        class="badge ml-3 "
      >
        Disabled
      </div>
    </div>
    <div
      class="body-regular mb16"
    >
      For an added layer of security, your admin requires you to use two-factor authentication (2FA) when you sign in to Gorgias.
      <a
        href=""
      >
         Learn more
      </a>
    </div>
    <button
      class="wrapper primary medium"
      type="button"
    >
      Enable Two-Factor Authentication
    </button>
  </div>
</body>
`;
